--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: jekyll-theme-cayman
+
+
+<script type="text/javascript">
+   var mymessage=confirm("你喜欢JavaScript吗?");
+    if(mymessage==true)
+    {   document.write("很好,加油!");   }
+    else
+    {  document.write("JS功能强大，要学习噢!");   }
+</script>
